integrate flyway, update KOL CRUD