@@ -8,19 +8,17 @@ import com.dtu.kolgo.dto.request.UpdatePasswordRequest;
 import com.dtu.kolgo.dto.response.TokenResponse;
 import com.dtu.kolgo.dto.response.UserResponse;
 import com.dtu.kolgo.dto.response.WebResponse;
-import com.dtu.kolgo.exception.*;
+import com.dtu.kolgo.exception.ExistsException;
+import com.dtu.kolgo.exception.ExpiredException;
+import com.dtu.kolgo.exception.InvalidException;
+import com.dtu.kolgo.exception.UserException;
 import com.dtu.kolgo.model.*;
 import com.dtu.kolgo.repository.EnterpriseRepository;
-import com.dtu.kolgo.repository.KolRepository;
-import com.dtu.kolgo.repository.TokenRepository;
 import com.dtu.kolgo.repository.UserRepository;
 import com.dtu.kolgo.security.JwtProvider;
-import com.dtu.kolgo.service.AuthenticationService;
-import com.dtu.kolgo.service.KolService;
-import com.dtu.kolgo.service.MailService;
-import com.dtu.kolgo.service.UserService;
+import com.dtu.kolgo.service.*;
 import com.dtu.kolgo.util.constant.GrantType;
-import com.dtu.kolgo.util.constant.TokenType;
+import com.dtu.kolgo.util.constant.Roles;
 import com.dtu.kolgo.util.env.Jwt;
 import com.dtu.kolgo.util.env.Server;
 import lombok.RequiredArgsConstructor;
@@ -30,7 +28,7 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
-import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 
 @Service
@@ -44,10 +42,9 @@ public class AuthenticationServiceImpl implements AuthenticationService {
     private final MailService mailService;
     private final UserService userService;
     private final UserRepository userRepo;
-    private final TokenRepository tokenRepo;
-    private final KolRepository kolRepo;
     private final KolService kolService;
     private final EnterpriseRepository enterpriseRepo;
+    private final TokenService tokenService;
 
     @Override
     public WebResponse register(RegisterRequest request) {
@@ -61,8 +58,8 @@ public class AuthenticationServiceImpl implements AuthenticationService {
                 request.getEmail(),
                 passwordEncoder.encode(request.getPassword())
         );
-        String url = String.format("http://%s:%s%s/auth/verify?biz=%b&verify_account_token=%s",
-                Server.HOST, Server.PORT, Server.CONTEXT_PATH, request.isBiz(), verifyAccountToken);
+        String url = String.format("http://%s:3000/verify_account?biz=%b&verify_account_token=%s",
+                Server.HOST, request.isBiz(), verifyAccountToken);
         String subject = "Verify your registration";
         String body = """
                 Dear [[name]],<br><br>
@@ -97,13 +94,13 @@ public class AuthenticationServiceImpl implements AuthenticationService {
                 .password(jwtProvider.extractPassword(token))
                 .build());
         if (isBiz) {
-            user.setRoles(Collections.singletonList(Role.ENTERPRISE));
+            user.setRoles(List.of(new Role(Roles.ENTERPRISE.name())));
             enterpriseRepo.save(Enterprise.builder()
                     .user(user)
                     .build());
         } else {
-            user.setRoles(Collections.singletonList(Role.KOL));
-            kolRepo.save(Kol.builder()
+            user.setRoles(List.of(new Role(Roles.KOL.name())));
+            kolService.save(Kol.builder()
                     .user(user)
                     .build());
         }
@@ -120,15 +117,19 @@ public class AuthenticationServiceImpl implements AuthenticationService {
         String newAccessToken = jwtProvider.generateAccessToken(user);
         String newRefreshToken = jwtProvider.generateRefreshToken(user);
 
-        tokenRepo.save(Token.builder()
+        TokenResponse tokenResponse = TokenResponse.builder()
+                .accessToken(newAccessToken)
+                .refreshToken(newRefreshToken)
+                .build();
+
+        tokenService.save(Token.builder()
                 .value(newRefreshToken)
                 .expiresIn(LocalDateTime.now().plusDays(Jwt.DB_TOKEN_EXPIRATION))
                 .user(user)
                 .build());
 
-
-
         return UserResponse.builder()
+                .token(tokenResponse)
                 .id(user.getId())
                 .firstName(user.getFirstName())
                 .lastName(user.getLastName())
@@ -138,7 +139,7 @@ public class AuthenticationServiceImpl implements AuthenticationService {
     }
 
     @Override
-    public void authenticate(long id, String password) {
+    public void authenticate(int id, String password) {
         try {
             authManager.authenticate(
                     new UsernamePasswordAuthenticationToken(id, password)
@@ -163,28 +164,21 @@ public class AuthenticationServiceImpl implements AuthenticationService {
         // get user from token
         User user = userService.getById(jwtProvider.extractUserId(refreshToken));
 
-        if (tokenRepo.existsByValue(refreshToken)) {
-            // remove single token
-            tokenRepo.deleteByValue(refreshToken);
-        } else {
-            // remove all token of user
-            tokenRepo.deleteAllByUser(user);
-            throw new NotFoundException("Refresh token not found: " + refreshToken);
-        }
+        tokenService.revoke(refreshToken);
 
         // generate a new pair of access token and refresh token
         String newAccessToken = jwtProvider.generateAccessToken(user);
         String newRefreshToken = jwtProvider.generateRefreshToken(user);
 
         // save new refresh token
-        tokenRepo.save(Token.builder()
+        tokenService.save(Token.builder()
                 .value(newRefreshToken)
                 .expiresIn(LocalDateTime.now().plusDays(Jwt.DB_TOKEN_EXPIRATION))
                 .user(user)
                 .build());
 
         // return new RefreshTokenResponse
-        return new TokenResponse(newAccessToken, TokenType.BEARER.toString(), newRefreshToken);
+        return new TokenResponse(newAccessToken, newRefreshToken);
     }
 
     public WebResponse resetPassword(ResetPasswordRequest request) {
@@ -221,7 +215,7 @@ public class AuthenticationServiceImpl implements AuthenticationService {
         }
 
         // Get user
-        long userId = jwtProvider.extractUserId(resetPasswordToken);
+        int userId = jwtProvider.extractUserId(resetPasswordToken);
         User user = userService.getById(userId);
 
         // Update password
